2007-03-25  Robert Ancell <robert.ancell@gmail.com>

	* Use string substitution using dictionary lookups when using ngettext to stop
	  substitution exceptions (Bug #409739)

2007-03-24  Robert Ancell <robert.ancell@gmail.com>

	* src/lib/sudoku_maker.py Correctly mark game name as unicode so
	  can be split on character boundaries (Bug #409740)

2007-03-16  Robert Ancell <robert.ancell@gmail.com>

	* src/lib/gsudoku.py Load random module (Bug #411073).
	* src/lib/game_selector.py Fix PyGtk tree selection bug (Bug #416063)
       	* src/lib/gnome_sudoku.py Fix undo tracker deletion (Bug #417805)
	* src/lib/sudoku_maker.py Handle exceptions loading pickled objects (Bug #408837)

2007-02-25  Thomas M. Hinkle  <thinkle@cvs.gnome.org>

	* src/lib/game_selector.py Fix display of games that were printed
	and "marked as played" in resume-game dialog.
	* src/lib/timer.py Handle games that don't have proper
	__absolute_start_time__ set gracefully. This is to account for
	games that are printed and marked-as-played, which don't have any
	timer information when they are restored. As a result, we put a
	check into toggle_timing which resets the timer if there is no
	__absolute_start_time__ set.
	* src/lib/saver.py Handle saved games with no tracker information
	(this is to make restoring printed games that were
	marked-as-played workable).
	* src/lib/gsudoku.py Handle games without any in_progress
	information saved. This is to handle restoring games that were
	marked-as-played. This fixes Bug 408787 - crash in Sudoku:
	ValueError: need more than 1 value to unpack.
	
2007-02-25  Thomas M. Hinkle  <thinkle@cvs.gnome.org>

	* src/lib/gsudoku.py: Fix bug #409472 crash in Sudoku: pressed
	Clear on one of....  This was caused by a bug in
	entry_validate. We've now simplified the find_error routine that
	entry_validate calls so that it will never return None (which
	caused the key error). We also fix a typo in
	SudokuGameDisplay.remove that was causing errors to get