@@ -2,6 +2,7 @@
 
 	* Use string substitution using dictionary lookups when using ngettext to stop
 	  substitution exceptions (Bug #409739)
+	* src/lib/game_selector.py Handle corrupted high score entries (Bug #413848)
 
 2007-03-24  Robert Ancell <robert.ancell@gmail.com>
 
